<resources>
    <string name="app_name">Meeting-App</string>

    <!--Titles-->
    <string name="onboarding_slide1_title">Selamat Datang di Up-Send</string>
    <string name="onboarding_slide1_subtitle">Yuk, Bikin Event!</string>
    <string name="onboarding_slide1_desc">Kamu bisa mengelola eventmu hanya melalui smartphone</string>

    <string name="onboarding_slide2_title">Login to your account</string>
    <string name="onboarding_slide2_subtitle">Lihat orang yang hadir di eventmu</string>
    <string name="onboarding_slide2_desc">Kamu juga bisa melihat siapa saja yang hadir di eventmu</string>

    <string name="onboarding_slide3_title">Login to your account</string>
    <string name="onboarding_slide3_subtitle">Daftar dan ikuti event yang menarik</string>
    <string name="onboarding_slide3_desc">Cukup daftar ke event yang kamu ikuti, dan scan QR Code ketika kamu datang di lokasi</string>

    <string name="onboarding_slide4_title">Daftar Akun</string>
    <string name="onboarding_slide4_subtitle">Yuk, gabung bersama kami</string>
    <string name="onboarding_slide4_desc">Jadwal eventmu akan kami kelola dengan baik</string>

    <!--Button OnBoarding-->
    <string name="skip_btn">Lewati</string>
    <string name="next">Lanjut</string>
    <string name="skip">Lewati</string>
    <string name="get_started">Mulai</string>
    <string name="login">Masuk</string>
    <string name="register_account">Daftar Akun</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="firstname">Nama Depan</string>
    <string name="last_name">Nama Belakang</string>
    <string name="email">Email</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="title_event">Title Meeting</string>
    <string name="datetime_event">DateTime Event</string>
    <string name="date_event">Date Event</string>
    <string name="date">12-12-2021</string>
    <string name="status_event">Status Meeting</string>
    <string name="description_event">Kamu juga bisa melihat siapa saja yang hadir di eventmu. Cukup daftar ke event yang kamu ikuti, dan scan QR Code ketika kamu datang di lokasi. Jadwal eventmu akan kami kelola dengan baik</string>
    <string name="text_description_event">Deskripsi</string>
    <string name="text_dateTime_event">Waktu Acara</string>
    <string name="dateTime_event">00:00:00</string>
    <string name="participant_registration">Peserta Daftar</string>
    <string name="participant_come">Peserta Hadir</string>
    <string name="scan_qr">Scan QR</string>
    <string name="text_start_date">Mulai : </string>
    <string name="text_due_date">Selesai : </string>
    <string name="_0">0</string>
    <string name="submit">Kirim</string>
    <string name="start_date">Tanggal Mulai</string>
    <string name="due_event">Tanggal Selesai</string>
    <string name="start_time">Waktu Mulai</string>
    <string name="due_time">Waktu Selesai</string>
    <string name="simple_message">Message</string>
    <string name="search_event">Cari Eventmu dan Ikuti</string>
    <string name="data_not_found">Data Rapat tidak ada</string>
    <string name="not_have_participant">Belum ada peserta</string>
    <string name="text_capasity_event">Kapasitas</string>
    <string name="event_detail_title">Detail Rapat</string>
    <string name="profile">Profil</string>
    <string name="logout">Keluar</string>
    <string name="event_created">Event Dibuat</string>
    <string name="event_following">Event Diikuti</string>
    <string name="name">fullname</string>
    <string name="fullname">Nama Lengkap</string>
    <string name="confirm_logout">Konfirmasi</string>
    <string name="question_logout">Apakah anda ingin keluar?</string>
    <string name="yes">Iya</string>
    <string name="no">Tidak</string>
    <string name="loading">Loading...</string>
    <string name="login_success">Berhasil Login</string>
    <string name="registration_success">Berhasil Registrasi</string>
    <string name="home">Beranda</string>
    <string name="keterangan_meeting">RAPAT/5/14052021/001</string>
    <string name="title_from_meeting">Dari :</string>
    <string name="title_date_meeting">Tanggal : </string>
    <string name="title_status_meeting">Status :</string>
    <string name="action">Aksi</string>
    <string name="show_forum">Lihat Forum</string>
    <string name="show_absensi">Daftar Absen</string>
    <string name="title_forum">Forum</string>
    <string name="comment">saya izin bertanya untuk menampilkan data yang punya kesamaan value tapi hanya satu saja gimana ya. saya izin bertanya untuk menampilkan data yang punya kesamaan value tapi hanya satu saja gimana ya.</string>
    <string name="message_access_forum">Tidak ada akses forum</string>
    <string name="title_room_meeting">Ruang :</string>
    <string name="room">Ruang Meeting</string>
    <string name="floating_action_button">floating_action_button</string>
    <string name="title_detail_forum">Detail Forum</string>
    <string name="replies_empty">Tidak ada Balasan</string>
    <string name="add_forum">Tambah Forum</string>
    <string name="input_teks">Masukkan Pertanyaan...</string>
    <string name="title_meeting_detail">Detail Rapat</string>
    <string name="latest">Terbaru</string>
    <string name="oldest">Terlama</string>
    <string name="like_a_most">Suka Terbanyak</string>
    <string name="like_a_little">Suka Tersedikit</string>
    <string name="comment_a_most">Balasan Terbanyak</string>
    <string name="comment_a_little">Balasan Tersedikit</string>
    <string name="reply">Balas</string>
    <string name="done">Selesai</string>
    <string name="not_yet_start">Belum Dimulai</string>
    <string name="process">Proses</string>
    <string name="approved">Disetujui\nPimpinan</string>
    <string name="like">%s suka</string>
    <string name="replied">%s balasan</string>
    <string name="date_time">%1$s / %2$s</string>
    <string name="approved_leader">Disetujui Pimpinan</string>
    <string name="nip">NIP</string>
    <string name="instance">Instansi</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="title_profile">Profil</string>
    <string name="address_instance">Alamat Instansi</string>
    <string name="jabatan">Jabatan</string>
    <string name="pangkat">Pangkat</string>
    <string name="telp_instansi">Telp. Instansi</string>
    <string name="telp_instansi_et">Telp. (0342) 80xxxx</string>
    <string name="fax_instansi">Fax Instansi</string>
    <string name="fax_instansi_et">Fax. (0342) 68xxxx</string>
    <string name="text_qr_web">QR Code Web</string>
    <string name="text_qr_mobile">QR Code Mobile</string>
    <string name="attendance">Absen</string>
    <string name="clear">Hapus</string>
</resources>