<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/latest"
        android:title="@string/latest"
        app:showAsAction="never"/>
    <item
        android:id="@+id/oldest"
        android:title="@string/oldest"
        app:showAsAction="never"/>
    <item
        android:id="@+id/like_a_most"
        android:title="@string/like_a_most"
        app:showAsAction="never"/>
    <item
        android:id="@+id/like_a_little"
        android:title="@string/like_a_little"
        app:showAsAction="never"/>
    <item
        android:id="@+id/comment_a_most"
        android:title="@string/comment_a_most"
        app:showAsAction="never"/>
    <item
        android:id="@+id/comment_a_little"
        android:title="@string/comment_a_little"
        app:showAsAction="never"/>
</menu>