<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".ui.profile.ProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_photo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/ic_profile_picture"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/img_photo"
        android:layout_marginStart="12dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.5"
            android:layout_marginHorizontal="8dp">

            <TextView
                android:id="@+id/tv_event_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="0"
                android:textSize="32sp"
                android:textColor="@color/colorPrimaryText"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/event_created"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.5">

            <TextView
                android:id="@+id/tv_event_join"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="0"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryText"
                android:textSize="32sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/event_following"
                android:textSize="14sp"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_photo"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="22dp"
        android:textColor="@color/colorPrimaryText"
        android:text="@string/username"/>

    <TextView
        android:id="@+id/tv_fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_username"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="4dp"
        android:text="@string/fullname"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_fullname"
        android:layout_alignParentStart="true"
        android:textSize="14sp"
        android:text="@string/email"/>


    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:padding="24dp"
        android:layout_alignParentBottom="true"
        android:text="@string/logout"
        android:visibility="gone "
        android:textColor="@color/colorTextIcon"/>

</RelativeLayout>