<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signature.SignatureActivity"
    android:orientation="vertical">

    <!-- Card View Detail -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:clipToPadding="true"
        app:cardCornerRadius="4dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="12dp">

            <TextView
                android:id="@+id/title_meeting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:gravity="center_horizontal"
                android:maxLines="3"
                android:text="@string/title_event"
                android:textColor="@color/colorPrimaryText"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/keterangan_meeting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:text="@string/keterangan_meeting"
                android:textColor="@color/colorSecondary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- From -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title_from_meeting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/title_from_meeting"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/from_meeting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textColor="@color/colorSecondary"
                    android:textSize="14sp"
                    tools:text="PUDIR 1" />
            </LinearLayout>

            <!-- Date -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title_room_meeting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/title_room_meeting"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/room_meeting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textColor="@color/colorSecondary"
                    android:textSize="14sp"
                    tools:text="@string/room" />
            </LinearLayout>

            <!-- Status -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title_status_meeting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/title_status_meeting"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/status_meeting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:background="@color/colorPrimary"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:padding="2dp"
                    android:textColor="@color/colorTextIcon"
                    android:textSize="14sp"
                    tools:text="@string/status_event" />
            </LinearLayout>
            <!-- Date -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title_date_meeting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/title_date_meeting"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/date_meeting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/colorSecondary"
                    android:textSize="14sp"
                    tools:text="@string/date" />
            </LinearLayout>

            <!--Start DateTime-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_start_date"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dateTime_meeting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:maxLines="3"
                    android:text="@string/dateTime_event"
                    android:textColor="@color/colorSecondary"
                    android:textSize="14sp" />
            </LinearLayout>

            <!--Due DateTime-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_due_date"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/due_dateTime_meeting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:maxLines="3"
                    android:text="@string/dateTime_event"
                    android:textColor="@color/colorSecondary"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tanda Tangan"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimaryText"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <com.github.gcacace.signaturepad.views.SignaturePad
        android:id="@+id/signature_pad"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        app:penColor="@android:color/black"/>

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:padding="24dp"
            android:text="@string/clear"
            android:textAllCaps="false"
            android:textColor="@color/colorTextIcon" />

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:padding="24dp"
            android:text="@string/attendance"
            android:textAllCaps="false"
            android:textColor="@color/colorTextIcon" />

    </LinearLayout>

</LinearLayout>