<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginStart="28dp"
    android:backgroundTint="@color/colorGreyLight"
    app:cardCornerRadius="8dp"
    android:clipToPadding="true"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/username" />

            <TextView
                android:id="@+id/date_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondary"
                android:textSize="12sp"
                android:textStyle="italic"
                android:layout_marginStart="20dp"
                android:layout_gravity="center_vertical"
                tools:text="@string/dateTime_event" />
        </LinearLayout>

        <TextView
            android:id="@+id/comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textSize="16sp"
            tools:text="@string/comment" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
