<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="14dp"
    android:layout_marginTop="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="12dp">

            <ImageView
                android:id="@+id/image_event"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_image_error"/>

            <TextView
                android:id="@+id/title_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_event"
                android:layout_marginTop="8dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:ellipsize="end"
                android:textColor="@color/colorPrimaryText"
                android:layout_marginHorizontal="12dp"/>

            <TextView
                android:id="@+id/date_time_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/datetime_event"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:ellipsize="end"
                android:layout_marginHorizontal="12dp"/>

            <TextView
                android:id="@+id/status_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_event"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:ellipsize="end"
                android:background="@color/colorPrimary"
                android:padding="8dp"
                android:textStyle="bold"
                android:textColor="@color/colorTextIcon"
                android:layout_marginHorizontal="12dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>