<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="12dp"
    android:layout_marginTop="12dp"
    android:backgroundTint="@color/colorGrey"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/username" />

        <TextView
            android:id="@+id/comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="3"
            android:textSize="16sp"
            tools:text="@string/comment" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/total_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryText"
                android:textStyle="bold"
                android:visibility="gone"
                tools:text="123 likes" />

            <TextView
                android:id="@+id/total_reply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:textColor="@color/colorPrimaryText"
                android:textStyle="bold"
                android:visibility="gone"
                tools:text="7 comment" />

            <TextView
                android:id="@+id/date_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondary"
                tools:text="@string/dateTime_event"
                android:paddingHorizontal="12dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
