<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginHorizontal="14dp"
    android:layout_marginTop="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingBottom="12dp">

                <TextView
                    android:id="@+id/keterangan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_event"
                    android:layout_marginTop="8dp"
                    android:textSize="14sp"
                    android:ellipsize="end"
                    android:textColor="@color/colorSecondary"
                    android:layout_marginHorizontal="12dp"/>

                <TextView
                    android:id="@+id/title_meeting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_event"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:ellipsize="end"
                    android:textColor="@color/colorPrimaryText"
                    android:layout_marginHorizontal="12dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingBottom="12dp">

                <TextView
                    android:id="@+id/status_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status_event"
                    android:layout_marginTop="10dp"
                    android:textSize="14sp"
                    android:ellipsize="end"
                    android:background="@color/colorPrimary"
                    android:padding="4dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorTextIcon"
                    android:layout_marginHorizontal="12dp"/>

                <TextView
                    android:id="@+id/date_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_event"
                    tools:text="Senin, 17-05-2021"
                    android:layout_marginTop="32dp"
                    android:textSize="14sp"
                    android:ellipsize="end"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="12dp"/>

                <TextView
                    android:id="@+id/date_time_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/datetime_event"
                    tools:text="12:00:00 - 13:00:00"
                    android:textSize="14sp"
                    android:ellipsize="end"
                    android:layout_marginHorizontal="12dp"/>

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>